# SE4AI-2024

./: README.md  commands.sh  pyproject.toml  requirements.txt  t5_usage_script.py  translations.jsonl
1-hello-world-api/: main.py
2-translation-api/: requirements.txt
2-translation-api/src/: main.py
3-dockerized-api/src/: translation.py
4-logging-io/logs/: translations.jsonl
5-kube-template/src/: languages.py
7-cat-facts-translation/: template.yaml
7-cat-facts-translation/cat_facts_translation/: Dockerfile  cat_facts_translation.py
7-cat-facts-translation/src/: models.py
8-load-testing-with-locust/: requirements.txt
8-load-testing-with-locust/cat_facts_translation/: job_template.yaml
8-load-testing-with-locust/load_testing/: locustfile.py
8-load-testing-with-locust/src/: main.py
8-load-testing-with-locust/src/logs/: translations.jsonl
dockerized-api/: Dockerfile
hello-work-api/: main.py
kube-template/: template.yaml
kube-template/src/: translation.py
logging-io/src/: main.py
translation-api/: main.py
translation-api/src/: translation.py
