[project]
name = "se4ai-2024"
version = "0.1.0"
description = "ENSC SE4AI class 2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "transformers[sentencepiece,torch]>=4.44.2",
    "locust>=2.31.6",
]

[tool.uv]
dev-dependencies = [
    "locust>=2.31.6",
]
